# miniopencv

./: .main.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  app  cmake_install.cmake  main.cpp  myopencv.cpp
core/: mat.cpp  mat.h
include/: myopencv.h
include/opencv2/: cvconfig.h
lib/: libopencv_features2d.so.4.2.0  libopencv_flann.so.4.2  libopencv_objdetect.so.4.2.0  libopencv_video.so.4.2.0
